--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="Weatherapp/index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -58,6 +58,6 @@
         </div>
     </div>
     
-    <script src="index.js"></script>
+    <script src="Weatherapp/index.js"></script>
 </body>
 </html>
