--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="Box">
                 <div class="infoWeather">
                     <div class="Weather">
-                        <img src="images/sun.png">
+                        <img src="Weatherapp/images/sun.png">
                         <p class="temperature">0<span>°C</span></p>
                         <p class="description">Sunny</p>
                     </div>
@@ -52,7 +52,7 @@
 
         <div class="notFound">
             <div class="box">
-                <img src="images/no-results.png">
+                <img src="Weatherapp/images/no-results.png">
                 <p>Oops! Location not Found</p>
             </div>
         </div>
